Beta 1197 jadx