@@ -1,17 +1,20 @@
 package org.telegram.messenger.exoplayer2.source.hls;
 
 import android.os.Handler;
-import android.text.TextUtils;
+import android.util.Log;
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.LinkedList;
 import org.telegram.messenger.exoplayer2.C;
 import org.telegram.messenger.exoplayer2.Format;
 import org.telegram.messenger.exoplayer2.FormatHolder;
+import org.telegram.messenger.exoplayer2.ParserException;
 import org.telegram.messenger.exoplayer2.decoder.DecoderInputBuffer;
+import org.telegram.messenger.exoplayer2.extractor.DummyTrackOutput;
 import org.telegram.messenger.exoplayer2.extractor.ExtractorOutput;
 import org.telegram.messenger.exoplayer2.extractor.SeekMap;
-import org.telegram.messenger.exoplayer2.source.AdaptiveMediaSourceEventListener.EventDispatcher;
+import org.telegram.messenger.exoplayer2.extractor.TrackOutput;
+import org.telegram.messenger.exoplayer2.source.MediaSourceEventListener.EventDispatcher;
 import org.telegram.messenger.exoplayer2.source.SampleQueue;
 import org.telegram.messenger.exoplayer2.source.SampleQueue.UpstreamFormatChangedListener;
 import org.telegram.messenger.exoplayer2.source.SampleStream;
@@ -34,14 +37,17 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
     private static final int PRIMARY_TYPE_NONE = 0;
     private static final int PRIMARY_TYPE_TEXT = 1;
     private static final int PRIMARY_TYPE_VIDEO = 3;
+    private static final String TAG = "HlsSampleStreamWrapper";
     private final Allocator allocator;
+    private int audioSampleQueueIndex = -1;
+    private boolean audioSampleQueueMappingDone;
     private final Callback callback;
     private final HlsChunkSource chunkSource;
     private Format downstreamTrackFormat;
-    private int enabledTrackCount;
+    private int enabledTrackGroupCount;
     private final EventDispatcher eventDispatcher;
     private final Handler handler = new Handler();
-    private boolean haveAudioVideoTrackGroups;
+    private boolean haveAudioVideoSampleQueues;
     private long lastSeekPositionUs;
     private final Loader loader = new Loader("Loader:HlsSampleStreamWrapper");
     private boolean loadingFinished;
@@ -50,24 +56,33 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
             HlsSampleStreamWrapper.this.maybeFinishPrepare();
         }
     };
-    private final LinkedList<HlsMediaChunk> mediaChunks = new LinkedList();
+    private final ArrayList<HlsMediaChunk> mediaChunks = new ArrayList();
     private final int minLoadableRetryCount;
     private final Format muxedAudioFormat;
     private final HlsChunkHolder nextChunkHolder = new HlsChunkHolder();
+    private final Runnable onTracksEndedRunnable = new Runnable() {
+        public void run() {
+            HlsSampleStreamWrapper.this.onTracksEnded();
+        }
+    };
     private long pendingResetPositionUs;
     private boolean pendingResetUpstreamFormats;
     private boolean prepared;
     private int primaryTrackGroupIndex;
     private boolean released;
+    private long sampleOffsetUs;
+    private boolean[] sampleQueueIsAudioVideoFlags = new boolean[0];
     private int[] sampleQueueTrackIds = new int[0];
     private SampleQueue[] sampleQueues = new SampleQueue[0];
     private boolean sampleQueuesBuilt;
+    private boolean[] sampleQueuesEnabledStates = new boolean[0];
     private boolean seenFirstTrackSelection;
-    private boolean[] trackGroupEnabledStates;
-    private boolean[] trackGroupIsAudioVideoFlags;
+    private int[] trackGroupToSampleQueueIndex;
     private TrackGroupArray trackGroups;
     private final int trackType;
-    private int upstreamChunkUid;
+    private boolean tracksEnded;
+    private int videoSampleQueueIndex = -1;
+    private boolean videoSampleQueueMappingDone;
 
     public interface Callback extends org.telegram.messenger.exoplayer2.source.SequenceableLoader.Callback<HlsSampleStreamWrapper> {
         void onPlaylistRefreshRequired(HlsUrl hlsUrl);
@@ -93,10 +108,11 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
         }
     }
 
-    public void prepareSingleTrack(Format format) {
-        track(0, -1).format(format);
-        this.sampleQueuesBuilt = true;
-        maybeFinishPrepare();
+    public void prepareWithMasterPlaylistInfo(TrackGroupArray trackGroups, int primaryTrackGroupIndex) {
+        this.prepared = true;
+        this.trackGroups = trackGroups;
+        this.primaryTrackGroupIndex = primaryTrackGroupIndex;
+        this.callback.onPrepared();
     }
 
     public void maybeThrowPrepareError() throws IOException {
@@ -107,20 +123,45 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
         return this.trackGroups;
     }
 
+    public boolean isMappingFinished() {
+        return this.trackGroupToSampleQueueIndex != null;
+    }
+
+    public int bindSampleQueueToSampleStream(int trackGroupIndex) {
+        if (!isMappingFinished()) {
+            return -1;
+        }
+        int sampleQueueIndex = this.trackGroupToSampleQueueIndex[trackGroupIndex];
+        if (sampleQueueIndex == -1) {
+            return -1;
+        }
+        if (this.sampleQueuesEnabledStates[sampleQueueIndex]) {
+            return -1;
+        }
+        this.sampleQueuesEnabledStates[sampleQueueIndex] = true;
+        return sampleQueueIndex;
+    }
+
+    public void unbindSampleQueue(int trackGroupIndex) {
+        int sampleQueueIndex = this.trackGroupToSampleQueueIndex[trackGroupIndex];
+        Assertions.checkState(this.sampleQueuesEnabledStates[sampleQueueIndex]);
+        this.sampleQueuesEnabledStates[sampleQueueIndex] = false;
+    }
+
     public boolean selectTracks(TrackSelection[] selections, boolean[] mayRetainStreamFlags, SampleStream[] streams, boolean[] streamResetFlags, long positionUs, boolean forceReset) {
         boolean seekRequired;
-        SampleQueue sampleQueue;
         Assertions.checkState(this.prepared);
-        int oldEnabledTrackCount = this.enabledTrackCount;
+        int oldEnabledTrackGroupCount = this.enabledTrackGroupCount;
         int i = 0;
         while (i < selections.length) {
             if (streams[i] != null && (selections[i] == null || !mayRetainStreamFlags[i])) {
-                setTrackGroupEnabledState(((HlsSampleStream) streams[i]).group, false);
+                this.enabledTrackGroupCount--;
+                ((HlsSampleStream) streams[i]).unbindSampleQueue();
                 streams[i] = null;
             }
             i++;
         }
-        if (forceReset || (this.seenFirstTrackSelection ? oldEnabledTrackCount == 0 : positionUs != this.lastSeekPositionUs)) {
+        if (forceReset || (this.seenFirstTrackSelection ? oldEnabledTrackGroupCount == 0 : positionUs != this.lastSeekPositionUs)) {
             seekRequired = true;
         } else {
             seekRequired = false;
@@ -130,19 +171,20 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
         i = 0;
         while (i < selections.length) {
             if (streams[i] == null && selections[i] != null) {
+                this.enabledTrackGroupCount++;
                 TrackSelection selection = selections[i];
                 int trackGroupIndex = this.trackGroups.indexOf(selection.getTrackGroup());
-                setTrackGroupEnabledState(trackGroupIndex, true);
                 if (trackGroupIndex == this.primaryTrackGroupIndex) {
                     primaryTrackSelection = selection;
                     this.chunkSource.selectTracks(selection);
                 }
                 streams[i] = new HlsSampleStream(this, trackGroupIndex);
                 streamResetFlags[i] = true;
-                if (!seekRequired) {
-                    sampleQueue = this.sampleQueues[trackGroupIndex];
+                if (this.sampleQueuesBuilt && !seekRequired) {
+                    SampleQueue sampleQueue;
+                    sampleQueue = this.sampleQueues[this.trackGroupToSampleQueueIndex[trackGroupIndex]];
                     sampleQueue.rewind();
-                    if (sampleQueue.advanceTo(positionUs, true, true) || sampleQueue.getReadIndex() == 0) {
+                    if (sampleQueue.advanceTo(positionUs, true, true) != -1 || sampleQueue.getReadIndex() == 0) {
                         seekRequired = false;
                     } else {
                         seekRequired = true;
@@ -151,13 +193,15 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
             }
             i++;
         }
-        if (this.enabledTrackCount == 0) {
+        if (this.enabledTrackGroupCount == 0) {
             this.chunkSource.reset();
             this.downstreamTrackFormat = null;
             this.mediaChunks.clear();
             if (this.loader.isLoading()) {
-                for (SampleQueue sampleQueue2 : this.sampleQueues) {
-                    sampleQueue2.discardToEnd();
+                if (this.sampleQueuesBuilt) {
+                    for (SampleQueue sampleQueue2 : this.sampleQueues) {
+                        sampleQueue2.discardToEnd();
+                    }
                 }
                 this.loader.cancelLoading();
             } else {
@@ -169,8 +213,8 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
                 if (this.seenFirstTrackSelection) {
                     primarySampleQueueDirty = true;
                 } else {
-                    primaryTrackSelection.updateSelectedTrack(0);
-                    if (primaryTrackSelection.getSelectedIndexInTrackGroup() != this.chunkSource.getTrackGroup().indexOf(((HlsMediaChunk) this.mediaChunks.getLast()).trackFormat)) {
+                    primaryTrackSelection.updateSelectedTrack(positionUs, positionUs < 0 ? -positionUs : 0, C.TIME_UNSET);
+                    if (primaryTrackSelection.getSelectedIndexInTrackGroup() != this.chunkSource.getTrackGroup().indexOf(getLastMediaChunk().trackFormat)) {
                         primarySampleQueueDirty = true;
                     }
                 }
@@ -193,16 +237,18 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
         return seekRequired;
     }
 
-    public void discardBuffer(long positionUs) {
-        int sampleQueueCount = this.sampleQueues.length;
-        for (int i = 0; i < sampleQueueCount; i++) {
-            this.sampleQueues[i].discardTo(positionUs, false, this.trackGroupEnabledStates[i]);
+    public void discardBuffer(long positionUs, boolean toKeyframe) {
+        if (this.sampleQueuesBuilt) {
+            int sampleQueueCount = this.sampleQueues.length;
+            for (int i = 0; i < sampleQueueCount; i++) {
+                this.sampleQueues[i].discardTo(positionUs, toKeyframe, this.sampleQueuesEnabledStates[i]);
+            }
         }
     }
 
     public boolean seekToUs(long positionUs, boolean forceReset) {
         this.lastSeekPositionUs = positionUs;
-        if (!forceReset && !isPendingReset() && seekInsideBufferUs(positionUs)) {
+        if (this.sampleQueuesBuilt && !forceReset && !isPendingReset() && seekInsideBufferUs(positionUs)) {
             return false;
         }
         this.pendingResetPositionUs = positionUs;
@@ -214,25 +260,6 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
             resetSampleQueues();
         }
         return true;
-    }
-
-    public long getBufferedPositionUs() {
-        if (this.loadingFinished) {
-            return Long.MIN_VALUE;
-        }
-        if (isPendingReset()) {
-            return this.pendingResetPositionUs;
-        }
-        long bufferedPositionUs = this.lastSeekPositionUs;
-        HlsMediaChunk lastMediaChunk = (HlsMediaChunk) this.mediaChunks.getLast();
-        HlsMediaChunk lastCompletedMediaChunk = lastMediaChunk.isLoadCompleted() ? lastMediaChunk : this.mediaChunks.size() > 1 ? (HlsMediaChunk) this.mediaChunks.get(this.mediaChunks.size() - 2) : null;
-        if (lastCompletedMediaChunk != null) {
-            bufferedPositionUs = Math.max(bufferedPositionUs, lastCompletedMediaChunk.endTimeUs);
-        }
-        for (SampleQueue sampleQueue : this.sampleQueues) {
-            bufferedPositionUs = Math.max(bufferedPositionUs, sampleQueue.getLargestQueuedTimestampUs());
-        }
-        return bufferedPositionUs;
     }
 
     public void release() {
@@ -258,76 +285,95 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
         this.chunkSource.onPlaylistBlacklisted(url, blacklistMs);
     }
 
-    boolean isReady(int trackGroupIndex) {
-        return this.loadingFinished || (!isPendingReset() && this.sampleQueues[trackGroupIndex].hasNextSample());
+    public boolean isReady(int sampleQueueIndex) {
+        return this.loadingFinished || (!isPendingReset() && this.sampleQueues[sampleQueueIndex].hasNextSample());
     }
 
-    void maybeThrowError() throws IOException {
+    public void maybeThrowError() throws IOException {
         this.loader.maybeThrowError();
         this.chunkSource.maybeThrowError();
     }
 
-    int readData(int trackGroupIndex, FormatHolder formatHolder, DecoderInputBuffer buffer, boolean requireFormat) {
+    public int readData(int sampleQueueIndex, FormatHolder formatHolder, DecoderInputBuffer buffer, boolean requireFormat) {
         if (isPendingReset()) {
             return -3;
         }
         if (!this.mediaChunks.isEmpty()) {
-            while (this.mediaChunks.size() > 1 && finishedReadingChunk((HlsMediaChunk) this.mediaChunks.getFirst())) {
-                this.mediaChunks.removeFirst();
+            int discardToMediaChunkIndex = 0;
+            while (discardToMediaChunkIndex < this.mediaChunks.size() - 1 && finishedReadingChunk((HlsMediaChunk) this.mediaChunks.get(discardToMediaChunkIndex))) {
+                discardToMediaChunkIndex++;
             }
-            HlsMediaChunk currentChunk = (HlsMediaChunk) this.mediaChunks.getFirst();
+            if (discardToMediaChunkIndex > 0) {
+                Util.removeRange(this.mediaChunks, 0, discardToMediaChunkIndex);
+            }
+            HlsMediaChunk currentChunk = (HlsMediaChunk) this.mediaChunks.get(0);
             Format trackFormat = currentChunk.trackFormat;
             if (!trackFormat.equals(this.downstreamTrackFormat)) {
                 this.eventDispatcher.downstreamFormatChanged(this.trackType, trackFormat, currentChunk.trackSelectionReason, currentChunk.trackSelectionData, currentChunk.startTimeUs);
             }
             this.downstreamTrackFormat = trackFormat;
         }
-        return this.sampleQueues[trackGroupIndex].read(formatHolder, buffer, requireFormat, this.loadingFinished, this.lastSeekPositionUs);
+        return this.sampleQueues[sampleQueueIndex].read(formatHolder, buffer, requireFormat, this.loadingFinished, this.lastSeekPositionUs);
     }
 
-    void skipData(int trackGroupIndex, long positionUs) {
-        SampleQueue sampleQueue = this.sampleQueues[trackGroupIndex];
-        if (!this.loadingFinished || positionUs <= sampleQueue.getLargestQueuedTimestampUs()) {
-            sampleQueue.advanceTo(positionUs, true, true);
-        } else {
-            sampleQueue.advanceToEnd();
+    public int skipData(int sampleQueueIndex, long positionUs) {
+        if (isPendingReset()) {
+            return 0;
         }
-    }
-
-    private boolean finishedReadingChunk(HlsMediaChunk chunk) {
-        int chunkUid = chunk.uid;
-        int i = 0;
-        while (i < this.sampleQueues.length) {
-            if (this.trackGroupEnabledStates[i] && this.sampleQueues[i].peekSourceId() == chunkUid) {
-                return false;
-            }
-            i++;
+        SampleQueue sampleQueue = this.sampleQueues[sampleQueueIndex];
+        if (this.loadingFinished && positionUs > sampleQueue.getLargestQueuedTimestampUs()) {
+            return sampleQueue.advanceToEnd();
         }
-        return true;
+        int skipCount = sampleQueue.advanceTo(positionUs, true, true);
+        if (skipCount == -1) {
+            skipCount = 0;
+        }
+        return skipCount;
     }
 
-    private void resetSampleQueues() {
+    public long getBufferedPositionUs() {
+        if (this.loadingFinished) {
+            return Long.MIN_VALUE;
+        }
+        if (isPendingReset()) {
+            return this.pendingResetPositionUs;
+        }
+        long bufferedPositionUs = this.lastSeekPositionUs;
+        HlsMediaChunk lastMediaChunk = getLastMediaChunk();
+        HlsMediaChunk lastCompletedMediaChunk = lastMediaChunk.isLoadCompleted() ? lastMediaChunk : this.mediaChunks.size() > 1 ? (HlsMediaChunk) this.mediaChunks.get(this.mediaChunks.size() - 2) : null;
+        if (lastCompletedMediaChunk != null) {
+            bufferedPositionUs = Math.max(bufferedPositionUs, lastCompletedMediaChunk.endTimeUs);
+        }
+        if (!this.sampleQueuesBuilt) {
+            return bufferedPositionUs;
+        }
         for (SampleQueue sampleQueue : this.sampleQueues) {
-            sampleQueue.reset(this.pendingResetUpstreamFormats);
+            bufferedPositionUs = Math.max(bufferedPositionUs, sampleQueue.getLargestQueuedTimestampUs());
         }
-        this.pendingResetUpstreamFormats = false;
+        return bufferedPositionUs;
+    }
+
+    public long getNextLoadPositionUs() {
+        if (isPendingReset()) {
+            return this.pendingResetPositionUs;
+        }
+        return this.loadingFinished ? Long.MIN_VALUE : getLastMediaChunk().endTimeUs;
     }
 
     public boolean continueLoading(long positionUs) {
         if (this.loadingFinished || this.loader.isLoading()) {
             return false;
         }
-        HlsMediaChunk hlsMediaChunk;
-        HlsChunkSource hlsChunkSource = this.chunkSource;
-        if (this.mediaChunks.isEmpty()) {
-            hlsMediaChunk = null;
+        HlsMediaChunk previousChunk;
+        long loadPositionUs;
+        if (isPendingReset()) {
+            previousChunk = null;
+            loadPositionUs = this.pendingResetPositionUs;
         } else {
-            hlsMediaChunk = (HlsMediaChunk) this.mediaChunks.getLast();
+            previousChunk = getLastMediaChunk();
+            loadPositionUs = previousChunk.endTimeUs;
         }
-        if (this.pendingResetPositionUs != C.TIME_UNSET) {
-            positionUs = this.pendingResetPositionUs;
-        }
-        hlsChunkSource.getNextChunk(hlsMediaChunk, positionUs, this.nextChunkHolder);
+        this.chunkSource.getNextChunk(previousChunk, positionUs, loadPositionUs, this.nextChunkHolder);
         boolean endOfStream = this.nextChunkHolder.endOfStream;
         Chunk loadable = this.nextChunkHolder.chunk;
         HlsUrl playlistToLoad = this.nextChunkHolder.playlist;
@@ -353,11 +399,7 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
         }
     }
 
-    public long getNextLoadPositionUs() {
-        if (isPendingReset()) {
-            return this.pendingResetPositionUs;
-        }
-        return this.loadingFinished ? Long.MIN_VALUE : ((HlsMediaChunk) this.mediaChunks.getLast()).endTimeUs;
+    public void reevaluateBuffer(long positionUs) {
     }
 
     public void onLoadCompleted(Chunk loadable, long elapsedRealtimeMs, long loadDurationMs) {
@@ -374,7 +416,7 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
         this.eventDispatcher.loadCanceled(loadable.dataSpec, loadable.type, this.trackType, loadable.trackFormat, loadable.trackSelectionReason, loadable.trackSelectionData, loadable.startTimeUs, loadable.endTimeUs, elapsedRealtimeMs, loadDurationMs, loadable.bytesLoaded());
         if (!released) {
             resetSampleQueues();
-            if (this.enabledTrackCount > 0) {
+            if (this.enabledTrackGroupCount > 0) {
                 this.callback.onContinueLoadingRequested(this);
             }
         }
@@ -387,7 +429,7 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
         boolean canceled = false;
         if (this.chunkSource.onChunkLoadError(loadable, cancelable, error)) {
             if (isMediaChunk) {
-                Assertions.checkState(((HlsMediaChunk) this.mediaChunks.removeLast()) == loadable);
+                Assertions.checkState(((HlsMediaChunk) this.mediaChunks.remove(this.mediaChunks.size() + -1)) == loadable);
                 if (this.mediaChunks.isEmpty()) {
                     this.pendingResetPositionUs = this.lastSeekPositionUs;
                 }
@@ -396,19 +438,23 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
         }
         this.eventDispatcher.loadError(loadable.dataSpec, loadable.type, this.trackType, loadable.trackFormat, loadable.trackSelectionReason, loadable.trackSelectionData, loadable.startTimeUs, loadable.endTimeUs, elapsedRealtimeMs, loadDurationMs, loadable.bytesLoaded(), error, canceled);
         if (!canceled) {
-            return 0;
-        }
-        if (this.prepared) {
-            this.callback.onContinueLoadingRequested(this);
+            return error instanceof ParserException ? 3 : 0;
         } else {
-            continueLoading(this.lastSeekPositionUs);
+            if (this.prepared) {
+                this.callback.onContinueLoadingRequested(this);
+            } else {
+                continueLoading(this.lastSeekPositionUs);
+            }
+            return 2;
         }
-        return 2;
     }
 
-    public void init(int chunkUid, boolean shouldSpliceIn) {
+    public void init(int chunkUid, boolean shouldSpliceIn, boolean reusingExtractor) {
         int i = 0;
-        this.upstreamChunkUid = chunkUid;
+        if (!reusingExtractor) {
+            this.audioSampleQueueMappingDone = false;
+            this.videoSampleQueueMappingDone = false;
+        }
         for (SampleQueue sampleQueue : this.sampleQueues) {
             sampleQueue.sourceId(chunkUid);
         }
@@ -422,25 +468,70 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
         }
     }
 
-    public SampleQueue track(int id, int type) {
+    public TrackOutput track(int id, int type) {
         int trackCount = this.sampleQueues.length;
-        for (int i = 0; i < trackCount; i++) {
-            if (this.sampleQueueTrackIds[i] == id) {
-                return this.sampleQueues[i];
+        if (type == 1) {
+            if (this.audioSampleQueueIndex != -1) {
+                if (!this.audioSampleQueueMappingDone) {
+                    this.audioSampleQueueMappingDone = true;
+                    this.sampleQueueTrackIds[this.audioSampleQueueIndex] = id;
+                    return this.sampleQueues[this.audioSampleQueueIndex];
+                } else if (this.sampleQueueTrackIds[this.audioSampleQueueIndex] == id) {
+                    return this.sampleQueues[this.audioSampleQueueIndex];
+                } else {
+                    return createDummyTrackOutput(id, type);
+                }
+            } else if (this.tracksEnded) {
+                return createDummyTrackOutput(id, type);
             }
+        } else if (type != 2) {
+            for (int i = 0; i < trackCount; i++) {
+                if (this.sampleQueueTrackIds[i] == id) {
+                    return this.sampleQueues[i];
+                }
+            }
+            if (this.tracksEnded) {
+                return createDummyTrackOutput(id, type);
+            }
+        } else if (this.videoSampleQueueIndex != -1) {
+            if (!this.videoSampleQueueMappingDone) {
+                this.videoSampleQueueMappingDone = true;
+                this.sampleQueueTrackIds[this.videoSampleQueueIndex] = id;
+                return this.sampleQueues[this.videoSampleQueueIndex];
+            } else if (this.sampleQueueTrackIds[this.videoSampleQueueIndex] == id) {
+                return this.sampleQueues[this.videoSampleQueueIndex];
+            } else {
+                return createDummyTrackOutput(id, type);
+            }
+        } else if (this.tracksEnded) {
+            return createDummyTrackOutput(id, type);
         }
         SampleQueue trackOutput = new SampleQueue(this.allocator);
+        trackOutput.setSampleOffsetUs(this.sampleOffsetUs);
         trackOutput.setUpstreamFormatChangeListener(this);
         this.sampleQueueTrackIds = Arrays.copyOf(this.sampleQueueTrackIds, trackCount + 1);
         this.sampleQueueTrackIds[trackCount] = id;
         this.sampleQueues = (SampleQueue[]) Arrays.copyOf(this.sampleQueues, trackCount + 1);
         this.sampleQueues[trackCount] = trackOutput;
+        this.sampleQueueIsAudioVideoFlags = Arrays.copyOf(this.sampleQueueIsAudioVideoFlags, trackCount + 1);
+        boolean[] zArr = this.sampleQueueIsAudioVideoFlags;
+        boolean z = type == 1 || type == 2;
+        zArr[trackCount] = z;
+        this.haveAudioVideoSampleQueues |= this.sampleQueueIsAudioVideoFlags[trackCount];
+        if (type == 1) {
+            this.audioSampleQueueMappingDone = true;
+            this.audioSampleQueueIndex = trackCount;
+        } else if (type == 2) {
+            this.videoSampleQueueMappingDone = true;
+            this.videoSampleQueueIndex = trackCount;
+        }
+        this.sampleQueuesEnabledStates = Arrays.copyOf(this.sampleQueuesEnabledStates, trackCount + 1);
         return trackOutput;
     }
 
     public void endTracks() {
-        this.sampleQueuesBuilt = true;
-        this.handler.post(this.maybeFinishPrepareRunnable);
+        this.tracksEnded = true;
+        this.handler.post(this.onTracksEndedRunnable);
     }
 
     public void seekMap(SeekMap seekMap) {
@@ -450,8 +541,40 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
         this.handler.post(this.maybeFinishPrepareRunnable);
     }
 
+    public void setSampleOffsetUs(long sampleOffsetUs) {
+        this.sampleOffsetUs = sampleOffsetUs;
+        for (SampleQueue sampleQueue : this.sampleQueues) {
+            sampleQueue.setSampleOffsetUs(sampleOffsetUs);
+        }
+    }
+
+    private boolean finishedReadingChunk(HlsMediaChunk chunk) {
+        int chunkUid = chunk.uid;
+        int sampleQueueCount = this.sampleQueues.length;
+        int i = 0;
+        while (i < sampleQueueCount) {
+            if (this.sampleQueuesEnabledStates[i] && this.sampleQueues[i].peekSourceId() == chunkUid) {
+                return false;
+            }
+            i++;
+        }
+        return true;
+    }
+
+    private void resetSampleQueues() {
+        for (SampleQueue sampleQueue : this.sampleQueues) {
+            sampleQueue.reset(this.pendingResetUpstreamFormats);
+        }
+        this.pendingResetUpstreamFormats = false;
+    }
+
+    private void onTracksEnded() {
+        this.sampleQueuesBuilt = true;
+        maybeFinishPrepare();
+    }
+
     private void maybeFinishPrepare() {
-        if (!this.released && !this.prepared && this.sampleQueuesBuilt) {
+        if (!this.released && this.trackGroupToSampleQueueIndex == null && this.sampleQueuesBuilt) {
             SampleQueue[] sampleQueueArr = this.sampleQueues;
             int length = sampleQueueArr.length;
             int i = 0;
@@ -462,9 +585,27 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
                     return;
                 }
             }
+            if (this.trackGroups != null) {
+                mapSampleQueuesToMatchTrackGroups();
+                return;
+            }
             buildTracks();
             this.prepared = true;
             this.callback.onPrepared();
+        }
+    }
+
+    private void mapSampleQueuesToMatchTrackGroups() {
+        int trackGroupCount = this.trackGroups.length;
+        this.trackGroupToSampleQueueIndex = new int[trackGroupCount];
+        Arrays.fill(this.trackGroupToSampleQueueIndex, -1);
+        for (int i = 0; i < trackGroupCount; i++) {
+            for (int queueIndex = 0; queueIndex < this.sampleQueues.length; queueIndex++) {
+                if (formatsMatch(this.sampleQueues[queueIndex].getUpstreamFormat(), this.trackGroups.get(i).getFormat(0))) {
+                    this.trackGroupToSampleQueueIndex[i] = queueIndex;
+                    break;
+                }
+            }
         }
     }
 
@@ -495,57 +636,30 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
         TrackGroup chunkSourceTrackGroup = this.chunkSource.getTrackGroup();
         int chunkSourceTrackCount = chunkSourceTrackGroup.length;
         this.primaryTrackGroupIndex = -1;
-        this.trackGroupEnabledStates = new boolean[extractorTrackCount];
-        this.trackGroupIsAudioVideoFlags = new boolean[extractorTrackCount];
+        this.trackGroupToSampleQueueIndex = new int[extractorTrackCount];
+        for (i = 0; i < extractorTrackCount; i++) {
+            this.trackGroupToSampleQueueIndex[i] = i;
+        }
         TrackGroup[] trackGroups = new TrackGroup[extractorTrackCount];
         for (i = 0; i < extractorTrackCount; i++) {
             Format sampleFormat = this.sampleQueues[i].getUpstreamFormat();
-            String mimeType = sampleFormat.sampleMimeType;
-            boolean isAudioVideo = MimeTypes.isVideo(mimeType) || MimeTypes.isAudio(mimeType);
-            this.trackGroupIsAudioVideoFlags[i] = isAudioVideo;
-            this.haveAudioVideoTrackGroups |= isAudioVideo;
             if (i == primaryExtractorTrackIndex) {
                 Format[] formats = new Format[chunkSourceTrackCount];
                 for (int j = 0; j < chunkSourceTrackCount; j++) {
-                    formats[j] = deriveFormat(chunkSourceTrackGroup.getFormat(j), sampleFormat);
+                    formats[j] = deriveFormat(chunkSourceTrackGroup.getFormat(j), sampleFormat, true);
                 }
                 trackGroups[i] = new TrackGroup(formats);
                 this.primaryTrackGroupIndex = i;
             } else {
                 Format trackFormat = (primaryExtractorTrackType == 3 && MimeTypes.isAudio(sampleFormat.sampleMimeType)) ? this.muxedAudioFormat : null;
-                trackGroups[i] = new TrackGroup(deriveFormat(trackFormat, sampleFormat));
+                trackGroups[i] = new TrackGroup(deriveFormat(trackFormat, sampleFormat, false));
             }
         }
         this.trackGroups = new TrackGroupArray(trackGroups);
     }
 
-    private void setTrackGroupEnabledState(int trackGroupIndex, boolean enabledState) {
-        int i = 1;
-        Assertions.checkState(this.trackGroupEnabledStates[trackGroupIndex] != enabledState);
-        this.trackGroupEnabledStates[trackGroupIndex] = enabledState;
-        int i2 = this.enabledTrackCount;
-        if (!enabledState) {
-            i = -1;
-        }
-        this.enabledTrackCount = i2 + i;
-    }
-
-    private static Format deriveFormat(Format containerFormat, Format sampleFormat) {
-        if (containerFormat == null) {
-            return sampleFormat;
-        }
-        String codecs = null;
-        int sampleTrackType = MimeTypes.getTrackType(sampleFormat.sampleMimeType);
-        if (sampleTrackType == 1) {
-            codecs = getAudioCodecs(containerFormat.codecs);
-        } else if (sampleTrackType == 2) {
-            codecs = getVideoCodecs(containerFormat.codecs);
-        }
-        return sampleFormat.copyWithContainerInfo(containerFormat.id, codecs, containerFormat.bitrate, containerFormat.width, containerFormat.height, containerFormat.selectionFlags, containerFormat.language);
-    }
-
-    private boolean isMediaChunk(Chunk chunk) {
-        return chunk instanceof HlsMediaChunk;
+    private HlsMediaChunk getLastMediaChunk() {
+        return (HlsMediaChunk) this.mediaChunks.get(this.mediaChunks.size() - 1);
     }
 
     private boolean isPendingReset() {
@@ -553,45 +667,63 @@ final class HlsSampleStreamWrapper implements ExtractorOutput, UpstreamFormatCha
     }
 
     private boolean seekInsideBufferUs(long positionUs) {
-        int trackCount = this.sampleQueues.length;
+        int sampleQueueCount = this.sampleQueues.length;
         int i = 0;
-        while (i < trackCount) {
+        while (i < sampleQueueCount) {
+            boolean seekInsideQueue;
             SampleQueue sampleQueue = this.sampleQueues[i];
             sampleQueue.rewind();
-            if (!sampleQueue.advanceTo(positionUs, true, false) && (this.trackGroupIsAudioVideoFlags[i] || !this.haveAudioVideoTrackGroups)) {
+            if (sampleQueue.advanceTo(positionUs, true, false) != -1) {
+                seekInsideQueue = true;
+            } else {
+                seekInsideQueue = false;
+            }
+            if (!seekInsideQueue && (this.sampleQueueIsAudioVideoFlags[i] || !this.haveAudioVideoSampleQueues)) {
                 return false;
             }
-            sampleQueue.discardToRead();
             i++;
         }
         return true;
     }
 
-    private static String getAudioCodecs(String codecs) {
-        return getCodecsOfType(codecs, 1);
-    }
-
-    private static String getVideoCodecs(String codecs) {
-        return getCodecsOfType(codecs, 2);
-    }
-
-    private static String getCodecsOfType(String codecs, int trackType) {
-        if (TextUtils.isEmpty(codecs)) {
-            return null;
+    private static Format deriveFormat(Format playlistFormat, Format sampleFormat, boolean propagateBitrate) {
+        if (playlistFormat == null) {
+            return sampleFormat;
         }
-        String[] codecArray = codecs.split("(\\s*,\\s*)|(\\s*$)");
-        StringBuilder builder = new StringBuilder();
-        for (String codec : codecArray) {
-            if (trackType == MimeTypes.getTrackTypeOfCodec(codec)) {
-                if (builder.length() > 0) {
-                    builder.append(",");
-                }
-                builder.append(codec);
+        int bitrate = propagateBitrate ? playlistFormat.bitrate : -1;
+        String codecs = Util.getCodecsOfType(playlistFormat.codecs, MimeTypes.getTrackType(sampleFormat.sampleMimeType));
+        String mimeType = MimeTypes.getMediaMimeType(codecs);
+        if (mimeType == null) {
+            mimeType = sampleFormat.sampleMimeType;
+        }
+        return sampleFormat.copyWithContainerInfo(playlistFormat.id, mimeType, codecs, bitrate, playlistFormat.width, playlistFormat.height, playlistFormat.selectionFlags, playlistFormat.language);
+    }
+
+    private static boolean isMediaChunk(Chunk chunk) {
+        return chunk instanceof HlsMediaChunk;
+    }
+
+    private static boolean formatsMatch(Format manifestFormat, Format sampleFormat) {
+        String manifestFormatMimeType = manifestFormat.sampleMimeType;
+        String sampleFormatMimeType = sampleFormat.sampleMimeType;
+        int manifestFormatTrackType = MimeTypes.getTrackType(manifestFormatMimeType);
+        if (manifestFormatTrackType != 3) {
+            if (manifestFormatTrackType == MimeTypes.getTrackType(sampleFormatMimeType)) {
+                return true;
             }
+            return false;
+        } else if (!Util.areEqual(manifestFormatMimeType, sampleFormatMimeType)) {
+            return false;
+        } else {
+            if ((MimeTypes.APPLICATION_CEA608.equals(manifestFormatMimeType) || MimeTypes.APPLICATION_CEA708.equals(manifestFormatMimeType)) && manifestFormat.accessibilityChannel != sampleFormat.accessibilityChannel) {
+                return false;
+            }
+            return true;
         }
-        if (builder.length() > 0) {
-            return builder.toString();
-        }
-        return null;
+    }
+
+    private static DummyTrackOutput createDummyTrackOutput(int id, int type) {
+        Log.w(TAG, "Unmapped track with id " + id + " of type " + type);
+        return new DummyTrackOutput();
     }
 }
